# amqpconfd

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: amqpconfd.toml  config.rs  consumer.rs  main.rs  opts.rs  templater.rs
testfiles/: test.j2  test.toml
