[package]
name = "amqpconfd"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"
license = "MITa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4.13"
env_logger = "0.8.2"
clap = "3.0.0-beta.2"

tokio = { version = "0.2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"

tera = "1.6.1"